# tidb-examples

./: .gitignore  README.md
golang/gorm/: go.mod  main.go
golang/mysql-driver/: go.mod  main.go
java/hibernate/: README.md  build.gradle
java/hibernate/src/main/java/com/pingcap/hibernate/: Example.java
java/hibernate/src/main/resources/: hibernate.properties
php/laravel/: .env.example
php/laravel/app/Http/Controllers/: CustomerController.php  OrderController.php
php/laravel/app/Models/: Customer.php  Order.php
php/laravel/database/migrations/: 2021_09_29_061052_create_orders_table.php  2021_09_29_062047_create_customers_table.php
php/laravel/routes/: api.php
python/django/: manage.py  pyproject.toml
python/django/tidb_example/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
python/django/tidb_example/migrations/: 0001_initial.py
python/mysql_connector/: main.py  pyproject.toml
