[tool.poetry]
name = "tidb_example"
version = "0.1.0"
description = ""
authors = ["Weizhen Wang <wangweizhen@pingcap.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-tidb = {git = "https://github.com/pingcap/django-tidb.git", rev = "main"}
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
